# aim-protocol

./: Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  CRYPTO_SPEC.md  THREAT_MODEL.md  WIRE_FORMAT.md
examples/: basic-mesh.rs
test/: crypto_tests.rs  handshake_tests.rs  replay_tests.rs
