[workspace]
members = [
    "packages/core",
    "packages/mesh", 
    "packages/cli",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[workspace.dependencies]
# Cryptography - Using production-ready crates
ml-kem = "0.2.0"  # FIPS 203 compliant, pure Rust [^19^]
ml-dsa = "0.1.0"  # FIPS 204 compliant
sha2 = "0.10"
hkdf = "0.12"
blake3 = "1.5"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
constant_time_eq = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# P2P networking (placeholder for future)
libp2p = { version = "0.53", optional = true }
