[workspace]
members = [
    "packages/cli",
    "packages/core",
    "packages/mesh",
    "packages/xdp-firewall",
    "packages/xdp-firewall-ebpf",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"

[workspace.dependencies]
# Cryptography - Using production-ready crates
ml-kem = "0.3.0"  # Updated from 0.2.0 - API changed
ml-dsa = "0.2.0"  # Updated from rc version to stable
sha2 = "0.10"
hkdf = "0.12"
blake3 = "1.5"
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"
x25519-dalek = { version = "2.0", features = ["getrandom", "zeroize"] }  # ADDED

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
constant_time_eq = "0.3"
# ADDED missing utilities
monotree = "0.3"  # For Sparse Merkle Tree
bloomfilter = "1.0"  # For Bloom filter
shamir-vault = "2.0"  # Updated from 1.3.0

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"